--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+		<link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
 		<title>Serial Bridge</title>
 	</head>
 	<body>
