--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
+		<link href="/fontawesome/css/all.css" rel="stylesheet">
 		<title>Serial Bridge</title>
 	</head>
 	<body>
